MDEV-34970 Vector search fails to compile on s390x

add missing casts to float4store/float8store for bigendian.
fix a typo in float4store() usage
remove unnecessary one-byte-at-time appends