sql/item_vectorfunc.cc
@@ -179,11 +179,8 @@ String *Item_func_vec_fromtext::val_str(String *buf)
             goto error_format;
 
         char f_bin[4];
-        float4store(&f_bin, f);
-        buf->append(f_bin[0]);
-        buf->append(f_bin[1]);
-        buf->append(f_bin[2]);
-        buf->append(f_bin[3]);
+        float4store(f_bin, f);
+        buf->append(f_bin, sizeof(f_bin));
         break;
       }
       default:
